Fix invisible sound bar
Closes #569.

--- a/Discreet-Flat/src/applets/notifications.styl
+++ b/Discreet-Flat/src/applets/notifications.styl
@@ -67,6 +67,11 @@
 	.level
 		height: 0.7em
 		background-color: rgba(190,190,190,0.2)
+		border-radius: 1px;
+
+		.level-bar
+			background-color: $text
+			border-radius: 1px;
 
 
 .tile-preview, .tile-hud
